RESOLVED FIXED61100
+[WebScriptObject throwException:] doesn't work when invoke from obj-c field access
https://bugs.webkit.org/show_bug.cgi?id=61100
Summary +[WebScriptObject throwException:] doesn't work when invoke from obj-c field ...
Oliver Hunt
Reported 2011-05-18 18:07:16 PDT
+[WebScriptObject throwException:] doesn't work when invoke from obj-c field access
Attachments
Patch (2.87 KB, patch)
2011-05-18 18:10 PDT, Oliver Hunt
ggaren: review+
Oliver Hunt
Comment 1 2011-05-18 18:10:33 PDT
Geoffrey Garen
Comment 2 2011-05-18 18:14:17 PDT
Comment on attachment 94019 [details] Patch Please use the JSLock object instead.
Oliver Hunt
Comment 3 2011-05-18 18:17:45 PDT
Note You need to log in before you can comment on or make changes to this bug.