2011-05-18  Oliver Hunt  <oliver@apple.com>

Reviewed by Geoffrey Garen.

        +[WebScriptObject throwException:] doesn't work when invoked from obj-c field access
        https://bugs.webkit.org/show_bug.cgi?id=61100

        The objc bindings were written to assume exceptions would
        come from obj-c style exceptions, rather than throwException:
        This code simply calls the global ObjcInstance mechanism for
        transferring the reported exception.

        * bridge/objc/objc_instance.h:
        * bridge/objc/objc_runtime.mm:
        (JSC::Bindings::ObjcField::valueFromInstance):
        (JSC::Bindings::ObjcField::setValueToInstance):

Canonical link: https://commits.webkit.org/76452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86810 268f45cc-cd09-0410-ab3c-d52691b4dbfc